Fix spacing for media query of contact section text

--- a/style.css
+++ b/style.css
@@ -1299,11 +1299,7 @@ span {
   }
 
   .socials {
-    padding-bottom: 35px;
-  }
-
-  .messageContainer p {
-    padding: 35px 0px;
+    padding-bottom: 25px;
   }
 
   .messageContainer .socials i {
